# flask-security-txt

./: .coveragerc  .gitignore  .gitlab-ci.yml  README.MD  README.md  flask_security_txt.py  package-lock.json  pyproject.toml  pytest.ini  pytest.xml  setup.cfg  setup.py
.forgejo/workflows/: push.yml
flask_security_txt/: __init__.py  flask_security_txt.py
