[build-system]
requires       = [ "setuptools>=61.0" ]
build-backend  = "setuptools.build_meta"

[project]
authors      = [
    { name = "M. P. van de Weerd", email = "michael@parcifal.dev" }
]
readme       = "README.MD"
classifiers  = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]

[project.urls]
"Homepage"     = "https://gitlab.com/parcifal/flask-security-txt"
"Bug Tracker"  = "https://gitlab.com/parcifal/flask-security-txt/-/issues"
