[build-system]
requires       = [ "setuptools>=61.0" ]
build-backend  = "setuptools.build_meta"

[project]
name          = "Flask-SecurityTxt"
version       = "1.3.9"
description   = "A Flask extension for creating and serving security.txt files"
readme        = "README.md"
authors       = [
    { name = "M.P. van de Weerd", email = "michael@parcifal.dev" }
]
dependencies           = [ "flask", "flask-babel", "pgpy", "standard-imghdr" ]
keywords               = [ "web", "security", "security.txt" ]
license                = { text = "LICENSE" }
classifiers            = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]


[project.urls]
"Homepage"     = "https://forgejo.parcifal.dev/parcifal/flask-security-txt"
"Bug Tracker"  = "https://forgejo.parcifal.dev/parcifal/flask-security-txt/issues"
