[metadata]
name         = Flask-SecurityTxt
version      = 1.3.2
description  = Generate security.txt for Flask-based apps.
keywords     = web, security
license      = GPLv3

[options]
py_modules        = flask_security_txt
python_requires   = >=3.6
install_requires  = flask
                    pgpy
